--- a/en-GB/plg_system_select2joomla.ini
+++ b/en-GB/plg_system_select2joomla.ini
@@ -1,1 +1,22 @@
+; Select2Joomla Plugin Language File
+; Copyright (C) 2024 Salah JAAFAR. All rights reserved.
+; License GNU General Public License version 2 or later
 
+PLG_SYSTEM_SELECT2JOOMLA="System - Select2 for Joomla"
+PLG_SYSTEM_SELECT2JOOMLA_XML_DESCRIPTION="This plugin integrates Select2 and jQuery UI into Joomla, providing enhanced select boxes and UI components."
+
+; Field labels and descriptions
+PLG_SYSTEM_SELECT2JOOMLA_FIELD_USE_CDN_LABEL="Use CDN"
+PLG_SYSTEM_SELECT2JOOMLA_FIELD_USE_CDN_DESC="Choose whether to load Select2 and jQuery UI from a CDN or use local files."
+
+; Other labels
+PLG_SYSTEM_SELECT2JOOMLA_LOADED="Select2 and jQuery UI have been loaded successfully."
+PLG_SYSTEM_SELECT2JOOMLA_CDN_USED="Using CDN for Select2 and jQuery UI."
+PLG_SYSTEM_SELECT2JOOMLA_LOCAL_USED="Using local files for Select2 and jQuery UI."
+
+; Error messages
+PLG_SYSTEM_SELECT2JOOMLA_ERROR_LOADING="Error loading Select2 or jQuery UI. Please check your configuration."
+
+; Additional information
+PLG_SYSTEM_SELECT2JOOMLA_INFO_JQUERY_UI_VERSION="jQuery UI Version: 1.13.2"
+PLG_SYSTEM_SELECT2JOOMLA_INFO_SELECT2_VERSION="Select2 Version: 4.1.0-rc.0"
