--- a/en-GB/plg_system_select2joomla.sys.ini
+++ b/en-GB/plg_system_select2joomla.sys.ini
@@ -1,1 +1,20 @@
+; Select2Joomla Plugin System Language File
+; Copyright (C) 2024 Salah JAAFAR. All rights reserved.
+; License GNU General Public License version 2 or later
 
+PLG_SYSTEM_SELECT2JOOMLA="System - Select2 for Joomla"
+PLG_SYSTEM_SELECT2JOOMLA_XML_DESCRIPTION="This plugin integrates Select2 and jQuery UI into Joomla, providing enhanced select boxes and UI components."
+
+; Installation messages
+PLG_SYSTEM_SELECT2JOOMLA_INSTALL_SUCCESS="Select2 for Joomla plugin has been successfully installed."
+PLG_SYSTEM_SELECT2JOOMLA_UNINSTALL_SUCCESS="Select2 for Joomla plugin has been successfully uninstalled."
+PLG_SYSTEM_SELECT2JOOMLA_UPDATE_SUCCESS="Select2 for Joomla plugin has been successfully updated to version %s."
+
+; Error messages
+PLG_SYSTEM_SELECT2JOOMLA_INSTALL_FAILED="Installation of Select2 for Joomla plugin failed."
+PLG_SYSTEM_SELECT2JOOMLA_UNINSTALL_FAILED="Uninstallation of Select2 for Joomla plugin failed."
+PLG_SYSTEM_SELECT2JOOMLA_UPDATE_FAILED="Update of Select2 for Joomla plugin failed."
+
+; Plugin info
+PLG_SYSTEM_SELECT2JOOMLA_INFO="Select2 for Joomla"
+PLG_SYSTEM_SELECT2JOOMLA_INFO_DESC="Enhances Joomla's select elements with Select2 and adds jQuery UI components."
